src/test/deca/syntax/invalid/created/test-op1.deca
//test-op1.deca:3:18: token recognition error at: '&b'
{
    boolean = a &&&b;
}